crates/toml_edit/tests/fixtures/invalid/float-leading-zero.stderr
TOML parse error at line 1, column 17
  |
1 | leading-zero = 03.14
  |                 ^
Unexpected `3`
Expected `#`
